# small-gd-mods

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: circle-tool.cpp  crash-logger.cpp  every-key-jumps.cpp  fix-effect-lines.cpp  fps-multiplier.cpp  global-clipboard.cpp  hackpro_ext.h  ingame-screenshot.cpp  internal-res.cpp  mapped-hooks.hpp  menu-shaders.cpp  mod-menu-window.hpp  practice-orb-fix.cpp  rgb-color-input.cpp  run-info.cpp  song-search.cpp  sum-attempts.cpp  timestamp-fix.cpp  utils-cocos.hpp  utils.hpp
src/utils/: nodes.hpp
